lava-server (0.21.2-2) unstable; urgency=medium

  * Package instructions for using the initial data and sample
    configuration files

 -- Neil Williams <codehelp@debian.org>  Tue, 10 Dec 2013 11:41:15 +0000

lava-server (0.21.2-1) unstable; urgency=medium

  * New upstream version

 -- Neil Williams <codehelp@debian.org>  Mon, 09 Dec 2013 08:29:10 +0000

lava-server (0.21.1-6) unstable; urgency=medium

  * Remove dbconfig-common and configure localhost postgres manually

 -- Neil Williams <codehelp@debian.org>  Mon, 02 Dec 2013 13:34:50 +0000

lava-server (0.21.1-5) unstable; urgency=medium

  * Updated for dashboard format 1.7

 -- Neil Williams <codehelp@debian.org>  Wed, 27 Nov 2013 15:43:03 +0000

lava-server (0.21.1-4) unstable; urgency=low

  * Add upstream manpages

 -- Neil Williams <codehelp@debian.org>  Wed, 06 Nov 2013 16:48:41 +0000

lava-server (0.21.1-3) unstable; urgency=low

  * Package the etc files provided by upstream after merging from the
    packaging branch.

 -- Neil Williams <codehelp@debian.org>  Wed, 06 Nov 2013 10:36:34 +0000

lava-server (0.21.1-2) unstable; urgency=low

  * Add PEP386 support for versioned dependencies based on requires.txt

 -- Neil Williams <codehelp@debian.org>  Tue, 22 Oct 2013 15:29:06 +0100

lava-server (0.21.1-1) unstable; urgency=low

  * Update for working support of a native Debian LAVA install.

 -- Neil Williams <codehelp@debian.org>  Tue, 08 Oct 2013 16:00:48 +0100

lava-server (0.21.0-1) unstable; urgency=low

  * Incorporate changes from upstream server consolidation

 -- Neil Williams <codehelp@debian.org>  Thu, 03 Oct 2013 15:58:49 +0100

lava-server (0.20.1-1) unstable; urgency=low

  * Update from tip

 -- Neil Williams <codehelp@debian.org>  Fri, 13 Sep 2013 17:02:57 +0100

lava-server (0.20-5) UNRELEASED; urgency=low

  * Add config changes for apache2.4 support.
  * Package the scheduler init file
  * Add hints about symlinks needed later.
  * Specify pyscopg2 dependency provision.
