@@ -57,11 +57,29 @@ want to use the initial data so that this install gets a KVM device, use:
 
  $ sudo apt-get install qemu-system-x86
  $ sudo cp /usr/share/lava-server/starterkvm.conf /etc/lava-dispatcher/devices/
- $ sudo cp /usr/share/lava-server/kvm.conf /etc/lava-dispatcher/device-types/
  $ sudo lava-server manage loaddata /usr/share/lava-server/starterkvm.json
 
 The example starterkvm.conf only supports NAT networking, so will not be
 visible over TCP/IP to other devices when running tests.
+
+An example KVM health check is packaged:
+
+/usr/share/doc/lava-server/examples/kvm-health.json
+
+The contents of this JSON file should be added to the kvm device type
+entry in the admin interface, with some adaptations:
+
+0: Set a usable location in deploy_linaro_image
+1: Ensure a suitable bundle stream exists, matching the stream variable
+
+** TODO **
+The example KVM device needs an image to be tested.
+Document use of vmdebootstrap to create one and
+location to download one
+Provide a health check JSON and a first job JSON and where to look
+for JSON on other sites.
+Add JSON to create suitable lava-health bundle stream
+
 
 Instance name
 =============
