@@ -1,4 +1,0 @@
-client_type = qemu
-qemu_binary = qemu-system-x86_64
-kvm_networking_options = -net nic,model=virtio -net user
-qemu_options = -machine accel=kvm:tcg -hda {DISK_IMAGE} -nographic %(kvm_networking_options)s
