@@ -2,6 +2,8 @@ lava-server (0.21.2-2) unstable; urgency=medium
 
   * Package instructions for using the initial data and sample
     configuration files
+  * kvm.conf is packaged upstream in lava-dispatcher, removed.
+  * Package an example health check for kvm devices
 
  -- Neil Williams <codehelp@debian.org>  Tue, 10 Dec 2013 11:41:15 +0000
 
